css/style.css
@import url(http://weloveiconfonts.com/api/?family=entypo);
@import url(http://fonts.googleapis.com/css?family=Exo:300,400,500,600,700|Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Signika:400,300,600,700);

/* entypo */
[class*="entypo-"]:before {
  font-family: 'entypo', sans-serif;
}

body, html {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica';
  background: white;
}

* {
  box-sizing: box-model;
  -webkit-font-smoothing: antialiased;
  -font-rendering: optimizeLegability;
}

a {
  text-decoration: none;
  color: #888;
}

a:hover {
  color: #ff6600;
}

h1,h2,h3,h4,h5,h6 {
  margin: 0;
  padding: 0;
}

header {
  color: black;
  background: white;
  border-bottom: 1px solid #eee;
}

header .header-inner {
  padding: 10px 0;
}

header .header-inner,
.page .page-inner {
  width: 960px;
  margin: 0px auto;
  position: relative;
}

header nav {
  position: relative;
}

header nav .logo {
  font-weight: 16px;
  line-height: 50px;
  color: black;
}

header nav .logo .entypo-bucket {
  font-size: 28px;
}

header nav .logo h1 {
  display: inline-block;
  font-size: 36px;
  font-family: 'Signika';
  font-weight: 300;
  margin: 0;
  padding: 0;
}

header nav .logo h1 strong {
  font-weight: 400;
  color: #ff6600;
}

header nav .links {
  display: inline-block;
  position: absolute;
  right: 0;
  top: 0;
  line-height: 50px;
}

header nav .links a {
  margin-left: 20px;
  color: #777;
  font-size: 12px;
  font-family: 'Lato';
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 0px;
}

header nav .links a .radial {
  display: inline-block;
  width: 9px;
  height: 9px;
  margin-right: 5px;
  border-radius: 50%;
  background: #6cc425;
}

header nav .links a.donate {
  color: #ff6600;
  border: 2px solid #ff6600;
  padding: 5px 10px;
  border-radius: 2px;
}

header nav .links a:hover,
header nav .links a.active {
  color: #ff6600;
}

.clear {
  clear: both;
}

.entries > .indicator {
  text-align: center;
}

.section {
  padding: 20px 0;
}

.page-inner > h1 {
  font-weight: 300;
  color: #444;
}

.page-inner > h1 .right {
  float: right;
  font-size: 14px;
}

.page-inner > h1 .right a {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 1px;
  line-height: 50px;
}

.leaderboard .list {
  padding: 10px;
  width: 30%;
  float: left;
  border: 1px solid hsl(207, 11%, 86%);
  border-radius: 3px;
  margin-top: 30px;
  margin-right: 1%;
  margin-bottom: 30px;
  box-shadow: 0 1px 1px hsla(0, 0%, 0%, 0.1);
}

.leaderboard .list > h2 {
  font-weight: 600;
  padding-bottom: 0px;
}

.leaderboard .list > p {
  color: #666;
  padding: 5px 0;
  margin: 0 0 10px;
}

.leaderboard .list a {
  display: block;
  margin-bottom: 5px;
  color: #ff6600;
  font-size: 14px;
  border-bottom: 1px dotted hsl(207, 11%, 86%);
}

.leaderboard .list a:hover {
  color: black;
}

.leaderboard .list a h4 {
  display: inline-block;
  padding: 10px 8px 10px 0;
  background: white;
  line-height: 0px;
  margin-bottom: -1px;
}

.leaderboard .list a .installs,
.leaderboard .list a .label {
  font-weight: 600;
  color: #666;
  background: white;
  border-radius: 2px;
  padding: 2px 5px;
  float: right;
}


.leaderboard .list a .slug {
  font-size: 12px;
  color: #888;
  display: none;
}

.stats {
  background: hsl(24, 100%, 50%);
}

.stats .page-inner > h1 {
  color: white;
}

.stat {
  float: left;
  display: inner-block;
  width: 33%;
  padding: 20px 0;
}

.stat h1 {
  color: white;
  font-size: 18px;
  font-weight: 400;
  font-family: 'Open Sans';
  text-transform: uppercase;
  padding: 0 10px;
}

.stat h1 strong {
  font-size: 18px;
  font-weight: 600;
}

.stat h4 {
  font-size: 72px;
  font-weight: 400;
  color: white;
}

.status .overall p {
  display: inline-block;
}

.status .overall {
  margin: 20px 0;
  border-radius: 3px;
  font-size: 28px;
  text-align: center;
  background: hsl(93, 68%, 46%);
  color: white;
}

.status .system {
  width: 33%;
  display: inline-block;
  float: left;
  padding: 20px 0 60px;
  text-align: center;
}

.status .system .block {
  display: inline-block;
  border-radius: 2px;
  width: 10px;
  height: 10px;
  margin-right: 2px;
  position: relative;
}

.status .system > h2 {
  font-weight: 600;
}

.status .chart {
  border: 2px solid #eee;
  border-radius: 2px;

  padding: 20px;
  text-align: center;

  color: #888;
}

.status .block:hover:after {
  position: absolute;
  top: -34px;
  background: hsla(0, 0%, 0%, 0.8);
  display: block;
  width: 200px;
  height: 24px;
  content: attr(title);
  left: -90px;
  border-radius: 2px;
  color: white;
  font-size: 10px;
  line-height: 24px;
  font-weight: 600;
  text-transform: uppercase;
  font-family: Arial;
  letter-spacing: 1px;
  text-align: center;
  opacity: 1;
}

.status .block:after {
  opacity: 0;
  transition: all .2s;
}

.status .block.ok,
header nav .links a .radial.ok,
.status .overall.ok {
  background: hsl(93, 68%, 46%);
}

.status .block.warning,
header nav .links a .radial.warning,
.status .overall.warning {
  background: #ff9900;
}

.status .block.down,
header nav .links a .radial.down,
.status .overall.down {
  background: #cc0000;
}

.status .block.pending,
header nav .links a .radial.pending,
.status .overall.pending {
  background: #eee;
  color: #888;
}

.help-bubble {
  display: inline-block;
  width: 24px;
  height: 24px;
  background: #aaa;
  color: white;
  line-height: 24px;
  border-radius: 50%;
  text-align: center;
}

.template {
  display: none;
}

.section.hero {
  padding: 100px 0 140px;
}

.section.hero h4 {
  font-weight: 400;
  margin: 5px 0 40px;
  color: #aaa;
}

.section.hero h1 {
  font-weight: 300;
  margin: 0px 0 0;
  color: black;
  font-size: 38px;
}

.section.hero .graphic {
  position: absolute;
  right: 0;
}

.section.hero .graphic .circle {
  border: 2px solid;
  padding: 5px;
  border-radius: 50%;
  color: hsl(0, 0%, 80%);
}

.section.hero .graphic .circle.two {
  position: absolute;
  top: 108px;
  left: -188px;
  padding: 8px;
  border-color: hsl(0, 0%, 75%);
}

.section.hero .graphic .circle.three {
  position: absolute;
  top: 175px;
  left: -34px;
  padding: 15px;
  border-color: hsl(0, 0%, 68%);
}

.section.hero .graphic .circle.large {
  position: absolute;
  top: 67px;
  left: -109px;
  padding: 30px;
  border-color: hsl(20, 100%, 60%);
  z-index: 1;
}

.section.hero .graphic .line.one {
  width: 2px; height: 64px; position: absolute; 
  background: hsl(0, 0%, 75%); 
  -webkit-transform: rotate(-282deg); 
  -moz-transform: rotate(-282deg); 
  -ms-transform: rotate(-282deg); 
  -o-transform: rotate(-282deg); 
  top: 77px; 
  left: -140px;
}

.section.hero .graphic .line.two {
  width: 2px; 
  height: 64px; position: absolute; 
  background: hsl(0, 0%, 68%); 
  -webkit-transform: rotate(-390deg);
  -moz-transform: rotate(-390deg);
  -ms-transform: rotate(-390deg);
  -o-transform: rotate(-390deg); 
  top: 118px; 
  left: -41px;
}

.section.hero .graphic .line.three {
  width: 2px;
  height: 88px;
  position: absolute;
  background: #ccc;
  -webkit-transform: rotate(-318deg);
  -moz-transform: rotate(-318deg);
  -ms-transform: rotate(-318deg);
  -o-transform: rotate(-318deg)); 
  top: 0px;
  left: -28px;
}

.section.hero .graphic .circle.large span {
  line-height: 0;
  position: absolute;
  left: 13px;
  font-size: 32px;
  color: hsl(20, 100%, 60%);
}

.button {
  border: 2px solid hsl(24, 100%, 50%);
  border-radius: 2px;
  padding: 8px 12px;
  font-weight: 600;
  background: hsl(24, 100%, 50%);
  color: white;
}

.button:hover {
  color: hsl(24, 100%, 50%);
  background: white;
  cursor: pointer;
}

.features .page-inner > h1 {
  text-align: center;
}

.features .browser {
  width: 600px; 
  margin: 30px auto 0px;
  border: 1px solid hsl(207, 11%, 86%); 
  border-radius: 3px; 
  box-shadow: 0 1px 1px hsla(0, 0%, 0%, 0.1);
}

.features .browser .bar {
  border-bottom: 1px solid hsl(207, 11%, 86%);
  padding: 5px;
  background: hsl(207, 11%, 98%);
  border-radius: 3px 3px 0 0;
}

.features .browser .bar .address {
  border: 1px solid hsl(207, 11%, 86%);
  border-radius: 2px;
  padding: 10px;
  width: 84.7%;
}

.button-grey {
  background: white;
  border: 1px solid hsl(207, 11%, 86%);
  padding: 8px;
  font-size: 12px;
  color: #888;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 700;
  color: hsl(24, 100%, 50%);
}

.button-grey:hover {
  color: black;
}

.features .browser .browser-page {
  height: 230px;
  padding: 20px;
  overflow: auto;
}

.features .browser .browser-page .start-page {
  width: 336px;
  margin: 0 auto;
}

.features .browser .browser-page .start-page .browser-box {
  display: block;
  width: 102px;
  height: 102px;
  margin: 10px 10px 0 0;
  border: 1px solid hsl(207, 11%, 86%);
  float: left;
  border-radius: 3px;
  text-align: center;
  box-sizing: border-box;
  padding: 35px 10px;
  font-size: 11px;
}

.features .browser .browser-page .start-page .browser-box:hover {
  box-shadow: 0 1px 1px hsla(0, 0%, 0%, 0.1);
}
  
.leaderboard {
  padding-top: 40px;
}

.features {
  padding: 40px 0;
  border-bottom: 1px solid #eee;
}

